# dream-job-copilot

./: .env.example  .gitignore  FRONTEND_DESIGN.md  GUARDRAILS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/client/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/client/src/: App.jsx  index.css  main.jsx
frontend/client/src/api/: client.js
frontend/client/src/components/: ApplyButton.jsx  DropZone.jsx  Header.jsx  JobCard.jsx  LoadingOverlay.jsx  ProgressStepper.jsx  RoleTypeBadge.jsx  ScoreBar.jsx  SkillMatchChips.jsx  StarRating.jsx
frontend/client/src/context/: PipelineContext.jsx
frontend/client/src/hooks/: usePipeline.js  useSSE.js
frontend/client/src/pages/: ApplyHubPage.jsx  BestJobsPage.jsx  CoverLettersPage.jsx  EnhancedResumesPage.jsx  FeedbackPage.jsx  JobSearchPage.jsx  RecommendationsPage.jsx  UploadPage.jsx  (+1 more)
frontend/server/: index.js  package-lock.json  package.json  pipeline-bridge.js  run_pipeline.py
frontend/server/routes/: cover-letter.js  download.js  feedback.js  pipeline.js
src/: __init__.py  config.py  models.py
src/agents/: __init__.py  application_agent.py  feedback_agent.py  job_search_agent.py  recommendation_agent.py  resume_agent.py  resume_enhancement_agent.py  review_agent.py
src/pipeline/: __init__.py  copilot_pipeline.py
src/tools/: __init__.py  llm_client.py  resume_parser.py  search_client.py
tests/: __init__.py  conftest.py  test_job_search_agent.py  test_models.py  test_pipeline.py  test_recommendation_agent.py  test_resume_agent.py
(+7 files in other folders)
